packages/typ/tests/fixtures/diagnostics/0884_gadt_eval_bool_branch_mismatch_03.ml.infer.expected
File "0884_gadt_eval_bool_branch_mismatch_03.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0884_gadt_eval_bool_branch_mismatch_03 is not a valid module name.

File "0884_gadt_eval_bool_branch_mismatch_03.ml", line 7, characters 20-21:
7 |   | Bool_gamma b -> 2
                        ^
Error: The constant 2 has type int but an expression was expected of type
         a = bool
